# WhisperVoiceKeyboard

./: POLICY.md  README.md  build.gradle  gradle.properties  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/whispervoicekeyboardf/: ExampleInstrumentedTest.java
app/src/androidTest/java/com/mjm/whisperVoiceRecognition/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/whisperVoiceRecognition/: AudioDeviceConfig.java  JNICallback.java  RecordingThread.java  RustLib.java  VoiceKeyboardInputMethodService.java  WavAudioRecorder.java  (+1 more)
app/src/main/res/drawable/: backspace.xml  button_shape.xml  mic.xml  newline.xml  resource_return.xml
app/src/main/res/layout/: keyboard.xml  permissions_needed.xml  wizard.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/xml/: method.xml
app/src/main/rust/: Cargo.toml  LICENSE
app/src/main/rust/src/: asset.rs  asset_helper.rs  audio_device_config.rs  constants.rs  consts.rs  extract.rs  jni_util.rs  job.rs  lib.rs  lifetime.rs  lina.rs  mel.rs  record.rs  spectrogram.rs  statics.rs  work_buffer.rs
app/src/main/rust/src/transcription/: mod.rs  recording.rs
app/src/main/rust/src/whisper/: constants.rs  consts.rs  filters.rs  mel.rs  mod.rs  vocab.rs
gradle/wrapper/: gradle-wrapper.properties
whisperkeyboardwatch/: build.gradle
whisperkeyboardwatch/src/main/: AndroidManifest.xml
whisperkeyboardwatch/src/main/res/drawable/: backspace.xml  button_shape.xml
whisperkeyboardwatch/src/main/res/layout/: keyboard.xml
whisperkeyboardwatch/src/main/res/values/: colors.xml  strings.xml  styles.xml
whisperkeyboardwatch/src/main/res/values-night/: themes.xml
whisperkeyboardwatch/src/main/res/xml/: method.xml
(+22 files in other folders)
