[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
jni = { version = "0.20.0"}
ndk = { version= "0.7.0", features = ["api-level-30", "audio"]} 

android_logger = "0.11.1"
log = "0.4.17"

anyhow= "1.0.66"

mel = "0.3.0"
nalgebra ="0.31.4"

crossbeam-queue="0.3.8"

ac-ffmpeg = { git = "https://github.com/MichaelMcCulloch/rust-ac-ffmpeg", branch="master"}

[profile.release]
lto = true
strip = true

[lib]
name = "rust"
crate-type = ["cdylib"]


