[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
jni = { version = "0.20.0"}
ndk = { version= "0.7.0", features = ["api-level-30", "audio"]} 
ndk-sys = "0.4.1+23.1.7779620"
android_logger = "0.11.1"
log = "0.4.17"

anyhow= "1.0.66"

mel = "0.3.0"
nalgebra ="0.31.4"
crossbeam-queue="0.3.8"

rustfft = "6.1.0"
ndarray="0.15.6"
ndarray-ndimage= "0.3.0"
simdeez = "1.0.7"

ac-ffmpeg = { git = "https://github.com/MichaelMcCulloch/rust-ac-ffmpeg", branch="master"}

[profile.release]
lto = true
strip = true
[profile.dev]
opt-level = 3
[lib]
name = "rust"
crate-type = ["cdylib"]


